# cardano-faucet

./: .gitignore  CHANGELOG.md  Dockerfile  Readme.md  cabal.project  cardano-faucet.cabal  default.nix  hie.yaml  shell.nix
app/: Main.hs
config/: config.dhall
data/funding_store/: IDENTITY  LOG
nix/: default.nix
nix/pkgs/haskell/: haskell.nix
src/Alg/: Natural.hs
src/Cardano/: Faucet.hs
src/Cardano/Faucet/: AppWiring.hs  Configs.hs  Models.hs  Types.hs
src/Cardano/Faucet/Http/: Server.hs  Service.hs
src/Cardano/Faucet/Http/V1/: Endpoints.hs
src/Cardano/Faucet/Modules/: FundingOutputs.hs  OutputResolver.hs  RequestQueue.hs
src/Cardano/Faucet/Processes/: Executor.hs
src/Cardano/Faucet/Services/: ReCaptcha.hs
