cabal-version:      2.4
name:               cardano-faucet
version:            0.1.7.1

author:             ErgoLabs
maintainer:         ErgoLabs

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-faucet

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DerivingStrategies
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        PartialTypeSignatures
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeFamilies
                        TypeOperators
                        TypeSynonymInstances
                        TypeApplications
                        ViewPatterns

  ghc-options:          -O2
                        -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: base, project-config

    hs-source-dirs: src
    
    exposed-modules:
      Alg.Natural
      Cardano.Faucet.Models
      Cardano.Faucet.Types
      Cardano.Faucet.Modules.RequestQueue
      Cardano.Faucet.Modules.OutputResolver
      Cardano.Faucet.Modules.FundingOutputs
      Cardano.Faucet.Services.ReCaptcha
      Cardano.Faucet.Processes.Executor
      Cardano.Faucet.Http.V1.Endpoints
      Cardano.Faucet.Http.Service
      Cardano.Faucet.Http.Server
      Cardano.Faucet.Configs
      Cardano.Faucet.AppWiring
      Cardano.Faucet
                     
    build-depends:  bytestring
                  , rio
                  , text
                  , aeson
                  , singletons
                  , either
                  , aeson-gadt-th
                  , some
                  , dependent-sum-template
                  , containers
                  , freer-simple
                  , extra
                  , text
                  , dhall
                  , hlog
                  , streamly
                  , mtl == 2.2.2
                  , unliftio-core == 0.2.0.1
                  , resourcet == 1.2.4.3
                  , unagi-chan
                  , wai-cors == 0.2.7
                  , warp == 3.3.17
                  , servant-server == 0.18.3
                  , cryptonite == 0.27
                  , cardano-api == 1.32.1
                  , plutus-ledger == 0.1.0.0
                  , serialise == 0.2.3.0
                  , cardano-tx == 0.1.0.0
                  , network-api == 0.1.0.0
                  , wallet-api == 0.1.0.0
                  , submit-api == 0.1.0.0
                  , quickblue == 0.1.0.0
                  , plutus-chain-index == 0.1.0.0
                  , plutus-tx == 0.1.0.0
                  , plutus-ledger-api == 0.1.0.0
                  , plutus-ledger-constraints == 0.1.0.0
                  , plutus-contract == 0.1.0.0
                  , cardano-slotting == 0.1.0.0
                  , prettyprinter == 1.7.0
                  , data-default == 0.7.1.1
                  , split == 0.2.3.4
                  , http-conduit == 2.3.8
                  , rocksdb-haskell-jprupp == 2.1.3

executable cardano-faucet-exe
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs

    ghc-options:      -O2
                      -threaded

    build-depends:    base >= 4.9 && < 5
                    , cardano-faucet
                    , rio
